--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Mozilla is cool</h1>
     <img src="images/firefox-icon.png" alt="My test image">
-    <p> At Mozilla, we’re a global community of</p>
+    <p> At Mozilla, wae’re a global community of</p>
     <ul>
         <li>technologists</li>
         <li>thinkers</li>
